--- a/server/ninja-store/public/stylesheets/style.styl
+++ b/server/ninja-store/public/stylesheets/style.styl
@@ -3,3 +3,20 @@ body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
   color: #00B7FF
+
+#container
+    width: 450px
+    margin: 0 auto
+    padding: 40px 20px
+    background: #fff
+    box-shadow: 1px 3px 3px #333
+    border-radius: 5px
+
+#logo
+    text-align: center
+
+#display
+    margin: 20px 0 50px
+
+#userbar
+    margin-bottom: 10px
